Made basic template for dashboard and homepage

--- a/application/views/base/dash.twig
+++ b/application/views/base/dash.twig
@@ -11,8 +11,7 @@
 
     <title>sbnciface.org</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/public/css/sbnciface.css" rel="stylesheet">
+    <link href="/public/css/dashboard.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -24,25 +23,12 @@
   <body>
 
     <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Register</a></li>
-        </ul>
-        <h3 class="text-muted">sbnciface.org</h3>
-      </div>
 
 {% block container %}
 {% endblock %}
-
-      <div class="footer">
-        <p>&copy; sbnciface.org 2014</p>
-      </div>
-
-    </div> <!-- /container -->
-
+      
+    </div>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
   </body>
